@@ -16,3 +16,11 @@ dependencies {
     implementation project(':feature:event:api')
     implementation project(':feature:event:impl')
 }
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs << "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs "--enable-preview"
+}
