@@ -1,4 +1,11 @@
 dependencies {
-
     implementation(project(":feature:event:api"))
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
 }
